# BopCoreLib

./: .gitignore  CMakeLists.txt
BopCore/maths/: Vector2.cpp  Vector2.h
include/BopCoreLib/: Vector2.h  Vector3.h  config.h
maths/: Transfom.cpp  Transform.h  Vector3.cpp  Vector3.h
src/: Vector2.cpp  Vector3.cpp
